--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "test02",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html --public-url https://informatik.th-brandenburg.de/~hassenst/test02/"
   },
   "keywords": [],
-  "author": "",
+  "author": "Markus Hassenstein",
   "license": "ISC",
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
